# PranavMeds

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/v1/: compare.py  drugs.py  ocr.py  prescription.py  request_drug.py
backend/app/core/: config.py  database.py
backend/app/models/db/: models.py
backend/app/models/schemas/: schemas.py
backend/app/scrapers/: bulk_import.py  jan_aushadhi.py  normalizer.py  reindex.py
backend/app/services/: search.py
formyref/: pranavmeds_progress.md  pranavmedsmdfile.txt  progress.md  scanner_build_guide.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compare/: page.tsx
frontend/src/app/compare/[slug]/: page.tsx
frontend/src/app/drug/: page.tsx
frontend/src/app/drug/[slug]/: page.tsx
frontend/src/components/: MedicineScanner.tsx  PrescriptionScanner.tsx
