[project]
name = "PranavMeds-backend"
version = "0.1.0"
description = "PranavMeds — Indian pharmaceutical comparison platform backend"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.15.0",
    "redis>=6.2.0",
    "meilisearch>=0.40.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
scrapers = [
    "scrapy>=2.14.0",
    "pdfplumber>=0.11.0",
    "tabula-py>=9.0.0",
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "rapidfuzz>=3.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100
